--- a/templates/delete_task.html
+++ b/templates/delete_task.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>
-            Delete ToDoList application
-        </h1>
+        <form>
+            <h1>
+                Delete Task    
+            </h1>
+            <input />
+            <button>
+                Delete task
+            </button>
+         </form>
     </body>
 </html>
