--- a/templates/update_task.html
+++ b/templates/update_task.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>
-            Update ToDoList application
-        </h1>
+        <form>
+            <h1>
+                Update your task    
+            </h1>
+            <input />
+            <button>
+                Update task
+            </button>
+         </form>
     </body>
 </html>
