--- a/templates/signup.html
+++ b/templates/signup.html
@@ -51,34 +51,62 @@
 <body>
     <div class="signup-container">
         <h2>Signup</h2>
-        <form action="/signup" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <input type="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="submit" value="Signup" onclick="gotoLogin()">
+        <form action="/signup" id="signupform" method="post">
+            <input type="text" name="username" id="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirm_password" placeholder="Confirm Password">
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="submit" id="signupbtn" value="Signup">
         </form>
     </div>
 </body>
+
 <script>
-    function gotoLogin(){
+    $(document).ready(function() {
+        $("#signupform").submit(function(event) {
+            event.preventDefault(); // Prevent the form from submitting normally
+            
+            var username = $("#username").val();
+            var pass = $("#password").val();
+            var email = $("#email").val();
+            
+            $.ajax({
+                url: "/signup",
+                method: "POST",
+                data: JSON.stringify({ username: username, password: pass, email: email }),
+                contentType: "application/json",
+                success: function(response) {
+                    alert("User added successfully");
+                    window.location.href = "/";
+                },
+                error: function(xhr, status, error) {
+                    alert("Error adding User: " + error);
+                }
+            });
+        });
+    });
+</script>
+
+<!-- <script>
+    $("signupbtn").click(function(){
         var username = $("#username").val();
         var pass = $("#password").val();
         var email = $("#email").val();
+        print("username is: "+username)
         $.ajax({
             url: "/signup",
             method: "POST",
-            data: JSON.stringify({ user: username },{password: pass}, {email: email}),
+            data: JSON.stringify({ user: username, password: pass, email: email}),
             contentType: "application/json",
             success: function(response) {
                     alert("User added successfully");
+                    window.location.href = "/";
                 },
             error: function(xhr, status, error) {
                     alert("Error adding User: "+error);
                 }
         });
-        window.location.href = "/"
 
-    }
-</script>
+    })
+</script> -->
 </html>
