--- a/templates/signup.html
+++ b/templates/signup.html
@@ -54,7 +54,7 @@
         <form action="/signup" id="signupform" method="post">
             <input type="text" name="username" id="username" placeholder="Username" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
-            <input type="password" name="confirm_password" placeholder="Confirm Password">
+            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="submit" id="signupbtn" value="Signup">
         </form>
